--- a/support.html
+++ b/support.html
@@ -58,7 +58,7 @@
           <p>Thanks for taking the time to report it!</p>
           <h2><a name="support" class="anchor" href="#support"><span class="octicon octicon-link"></span></a>Support</h2>
 
-            <p>Having trouble?  Feel free to drop me a line on Twitter <a href="http://twitter.com/pixsied">@pixsied</a> and I'd be happy to help you sort it out.</p>
+            <p>Having trouble?  Feel free to drop me a line on Twitter <a href="http://twitter.com/csimpkins">@csimpkins</a> and I'd be happy to help you sort it out.</p>
 
           <h2><a name="faq" class="anchor" href="#faq"><span class="octicon octicon-link"></span></a>FAQ</h2>
           <h3><i class="icon-question icon-2x"></i> <span style="font-size:32px;">Install</span></h3>
@@ -82,7 +82,7 @@
           <h4>What happens if I exceed the API limit for my account?</h4>
           <p>Twitter blocks your access to their API data until the remainder of that 15 minute block of time has elapsed. You will receive an error message if you continue to attempt to retrieve new data during this period.</p>
           <h4>How do I avoid exceeding my limit when I use Tweetledee?</h4>
-          <p>Try caching your Twitter data and polling for new data every X seconds so that you do not exceed the limit that is in place for the API resource that you are using.  Serve the cached data to your site's users.</p>
+          <p>Use the cached versions of the Tweetledee files or implement your own caching for the data that you serve to your users.  See the <a href="caching.html">Caching</a> section of the documentation for more information.</p>
         </section>
 
         <aside id="sidebar">
@@ -107,16 +107,20 @@
             Usage
           </a>
 
-          <p class="repo-owner"><a href="https://github.com/chrissimpkins/tweetledee"></a> Developed by <a href="https://github.com/chrissimpkins">Chris Simpkins</a></p>
-          <p class="repo-owner sidebar-spacing middle-align"><span style="color:#00aced"><i class="icon-twitter icon-2x"></i></span> <a href="http://twitter.com/pixsied">@pixsied</a> | <a href="http://twitter.com/csimpkins">@csimpkins</a></p>
-          <p class="repo-owner sidebar-spacing middle-align"><a href="https://flattr.com/submit/auto?user_id=pixsied&url=http://github.com/chrissimpkins/tweetledee&title=Tweetledee&description=Tweetledee&language=en_GB&tags=Twitter,RSS,JSON,feed,programming,developer&category=software"><img src="https://flattr.com/_img/icons/flattr_logo_16.png" alt="Flattr Tweetledee!" /> Flattr Tweetledee!</a></p>
+          <p class="repo-owner"> Developed by <br><a href="https://github.com/chrissimpkins"><span style="font-size:20px;color:#751590; margin-right:4px"><i class="icon-github"></i></span></a><a href="http://sweetme.at">Chris Simpkins</a><a href="http://twitter.com/csimpkins"><span style="font-size:20px;color:#00aced; margin-left:4px"><i class="icon-twitter"></i></span></a></p>
+          <p class="repo-owner"><u>Contributors</u> <br>
+          <a href="https://github.com/levymetal">Christian Varga</a><br>
+          <a href="https://twitter.com/fogcat">Geoff Smith</a><br>
+          <a href="https://github.com/themattharris">Matt Harris</a><br>
+          <a href="https://github.com/jjschwarz">Jason Schwarz</a>
+          </p>
         </aside>
       </div>
     </div>
     <footer>
       <div class="inner">
       <div class="license">
-      <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a><br />This documentation is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+This documentation is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
       </div>
       </div>
     </footer>
