added new license information to the footer

--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
     <footer>
       <div class="inner">
       <div class="license">
-This documentation is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+This documentation is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a> <br>
+      Tweetledee is licensed under the <a href="https://github.com/chrissimpkins/tweetledee/blob/master/LICENSE.txt">MIT license</a>
       </div>
       </div>
     </footer>
