updated usage for error in one of the URL for listsjson

--- a/usage.html
+++ b/usage.html
@@ -138,7 +138,7 @@
 <h5>Your list called "reading-list"</h5>
 <pre><code>http://[yourdomain]/tweetledee/listsjson.php?list=reading-list</code></pre>
 <h5>Your list called "reading-list" with caching interval of 5 minutes (300 sec)</h5>
-<pre><code>http://[yourdomain]/tweetledee/listsjson.php?cache_interval=300</code></pre>
+<pre><code>http://[yourdomain]/tweetledee/listsjson.php?list=reading-list&cache_interval=300</code></pre>
 <h5>@anotheruser's list called "reading-list"</h5>
 <pre><code>http://[yourdomain]/tweetledee/listsjson.php?user=anotheruser&list=reading-list</code></pre>
 <h5>100 tweets from your list called "reading-list"</h5>
