updated fonts, font sizes, some colors

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h1>
-<a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Easy Access to Your Twitter Data</h1>
+<a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Easy Access to Your Data</h1>
 
 <p> <span style='color:red; font-size:24px'>Tweetledee now supports Twitter data caching to avoid exceeding the Twitter API v1.1 rate limits <i class="icon-forward"></i> <a href="caching.html">Learn More</a></span></p>
 
