--- a/support.html
+++ b/support.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -17,115 +18,156 @@
 
     <title>Tweetledee : Support and Bug Reports</title>
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-42098785-1', 'chrissimpkins.github.io');
-  ga('send', 'pageview');
+    ga('create', 'UA-42098785-1', 'chrissimpkins.github.io');
+    ga('send', 'pageview');
+    </script>
+</head>
 
-</script>
-  </head>
-
-  <body>
+<body>
     <header>
-      <div class="inner">
-        <h1>Tweetledee</h1>
-        <h2>A PHP library that provides an incredibly easy way to access Twitter data formatted as JSON or a RSS feed</h2>
-        <a href="https://github.com/chrissimpkins/tweetledee" class="button"><small>View project on</small>GitHub</a>
-      </div>
+        <div class="inner">
+            <h1>Tweetledee</h1>
+            <h2>A PHP library that provides an incredibly easy way to access Twitter data formatted as JSON or a RSS feed</h2>
+            <a href="https://github.com/chrissimpkins/tweetledee" class="button">
+                <small>View project on</small>GitHub</a>
+        </div>
     </header>
 
     <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
-          <h1>Tweetledee Help</h1>
-          <h2><a name="bug-reporting" class="anchor" href="#bug-reporting"><span class="octicon octicon-link"></span></a>Bugs</h2>
-          <p>Find a bug?  Please <a href="https://github.com/chrissimpkins/tweetledee/issues/new">post it as a new issue</a> on GitHub.</p>
-          <p>Please include the following in your bug report:</p>
-          <ul>
-            <li>PHP version that you are using</li>
-            <li>Tweetledee version that you are using (listed at the top of every file in comment)</li>
-            <li>Any error message(s) that you receive</li>
-            <li>A detailed description of when/how the error takes place</li>
-          </ul>
-          <p>If you are comfortable making a change in the file to help with debugging, please switch the $TLD_DEBUG flag to 1 like this:</p>
-          <p><pre><code>$TLD_DEBUG = 0;</code></pre></p>
-          <p>to</p>
-          <p><pre><code>$TLD_DEBUG = 1;</code></pre></p>
-          <p>Then run the file again and record any error messages for your bug report.</p>
-          <p>Thanks for taking the time to report it!</p>
-          <h2><a name="support" class="anchor" href="#support"><span class="octicon octicon-link"></span></a>Support</h2>
+        <div class="inner clearfix">
+            <section id="main-content">
+                <h1>Tweetledee Help</h1>
+                <h2>
+                    <a name="bug-reporting" class="anchor" href="#bug-reporting">
+                        <span class="octicon octicon-link"></span>
+                    </a>Bugs</h2>
+                <p>Find a bug? Please <a href="https://github.com/chrissimpkins/tweetledee/issues/new">post it as a new issue</a> on GitHub.</p>
+                <p>Please include the following in your bug report:</p>
+                <ul>
+                    <li>PHP version that you are using</li>
+                    <li>Tweetledee version that you are using (listed at the top of every file in comment)</li>
+                    <li>Any error message(s) that you receive</li>
+                    <li>A detailed description of when/how the error takes place</li>
+                </ul>
+                <p>If you are comfortable making a change in the file to help with debugging, please switch the $TLD_DEBUG flag to 1 like this:</p>
+                <p><pre><code>$TLD_DEBUG = 0;</code></pre>
+                </p>
+                <p>to</p>
+                <p><pre><code>$TLD_DEBUG = 1;</code></pre>
+                </p>
+                <p>Then run the file again and record any error messages for your bug report.</p>
+                <p>Thanks for taking the time to report it!</p>
+                <h2>
+                    <a name="support" class="anchor" href="#support">
+                        <span class="octicon octicon-link"></span>
+                    </a>Support</h2>
 
-            <p>Having trouble?  Feel free to drop me a line on Twitter <a href="http://twitter.com/csimpkins">@csimpkins</a> and I'd be happy to help you sort it out.</p>
+                <p>Having trouble? Feel free to drop me a line on Twitter <a href="http://twitter.com/csimpkins">@csimpkins</a> and I'd be happy to help you sort it out.</p>
 
-          <h2><a name="faq" class="anchor" href="#faq"><span class="octicon octicon-link"></span></a>FAQ</h2>
-          <h3><i class="icon-question icon-2x"></i> <span style="font-size:32px;">Install</span></h3>
-          <h4>What version of PHP do I need to use Tweetledee?</h4>
-          <p>Version 5.3 or above for the RSS feed and standard JSON files.  Version 5.4 or above for pretty printed JSON.</p>
-          <h4>How do I get my Twitter OAuth tokens/keys?</h4>
-          <p>You need to make a Twitter application</p>
-          <h4>I don't make applications. Does that mean that I can't use Tweetledee?</h4>
-          <p>Tweetledee acts as your application and allows you to access Twitter data through the Twitter API.  You can designate the domain where you install and use Tweetledee as the application URL.</p>
-          <h4>How do I make a Twitter application?</h4>
-          <p>Please see the detailed guide on the <a href="index.html">home page of this documentation site</a></p>
-          <h4>What is the URL for the new application page on the Twitter developers site?</h4>
-          <p><a href="https://dev.twitter.com/apps/new">https://dev.twitter.com/apps/new</a></p>
-          <h3><i class="icon-question icon-2x"></i> <span style="font-size:32px;">Use</span></h3>
-          <h4>I get the error "verify_credentials connection failure error". What is that?</h4>
-          <p>It generally means that you exceeded the Twitter API rate limits. Please see <a href="https://dev.twitter.com/docs/rate-limiting/1.1/limits">this page</a> for the Twitter limits.  As of version 0.2.8 of Tweetledee, the error message that is displayed when you exceed the Twitter rate limits was changed to "Exceeded Twitter API rate limit".</p>
-          <h4>What does the Twitter API limit of "15" mean?</h4>
-          <p>You can access the Twitter API 15 times every 15 minutes for these API resources.</p>
-          <h4>What does the Twitter API limit of "180" mean?</h4>
-          <p>You can access the Twitter API 180 times every 15 minutes for these API resources.</p>
-          <h4>What happens if I exceed the API limit for my account?</h4>
-          <p>Twitter blocks your access to their API data until the remainder of that 15 minute block of time has elapsed. You will receive an error message if you continue to attempt to retrieve new data during this period.</p>
-          <h4>How do I avoid exceeding my limit when I use Tweetledee?</h4>
-          <p>Use the cached versions of the Tweetledee files or implement your own caching for the data that you serve to your users.  See the <a href="caching.html">Caching</a> section of the documentation for more information.</p>
-        </section>
+                <h2>
+                    <a name="faq" class="anchor" href="#faq">
+                        <span class="octicon octicon-link"></span>
+                    </a>FAQ</h2>
+                <h3><i class="icon-question icon-2x"></i>
+                    <span style="font-size:32px;">Install</span>
+                </h3>
+                <h4>What version of PHP do I need to use Tweetledee?</h4>
+                <p>Version 5.3 or above for the RSS feed and standard JSON files. As of version 0.4.1 of Tweetledee, JSON pretty printing is also supported for PHP versions 5.3+.  Previous versions supported JSON pretty printing for PHP versions 5.4 or above.</p>
+                <h4>How do I get my Twitter OAuth tokens/keys?</h4>
+                <p>You need to make a Twitter application</p>
+                <h4>I don't make applications. Does that mean that I can't use Tweetledee?</h4>
+                <p>Tweetledee acts as your application and allows you to access Twitter data through the Twitter API. You can designate the domain where you install and use Tweetledee as the application URL.</p>
+                <h4>How do I make a Twitter application?</h4>
+                <p>Please see the detailed guide on the <a href="index.html">home page of this documentation site</a>
+                </p>
+                <h4>What is the URL for the new application page on the Twitter developers site?</h4>
+                <p><a href="https://dev.twitter.com/apps/new">https://dev.twitter.com/apps/new</a>
+                </p>
+                <h3><i class="icon-question icon-2x"></i>
+                    <span style="font-size:32px;">Use</span>
+                </h3>
+                <h4>I get the error "verify_credentials connection failure error". What is that?</h4>
+                <p>It generally means that you exceeded the Twitter API rate limits. Please see <a href="https://dev.twitter.com/docs/rate-limiting/1.1/limits">this page</a> for the Twitter limits. As of version 0.2.8 of Tweetledee, the error message that is displayed when you exceed the Twitter rate limits was changed to "Exceeded Twitter API rate limit".</p>
+                <h4>What does the Twitter API limit of "15" mean?</h4>
+                <p>You can access the Twitter API 15 times every 15 minutes for these API resources.</p>
+                <h4>What does the Twitter API limit of "180" mean?</h4>
+                <p>You can access the Twitter API 180 times every 15 minutes for these API resources.</p>
+                <h4>What happens if I exceed the API limit for my account?</h4>
+                <p>Twitter blocks your access to their API data until the remainder of that 15 minute block of time has elapsed. You will receive an error message if you continue to attempt to retrieve new data during this period.</p>
+                <h4>How do I avoid exceeding my limit when I use Tweetledee?</h4>
+                <p>Use the cached versions of the Tweetledee files or implement your own caching for the data that you serve to your users. See the <a href="caching.html">Caching</a> section of the documentation for more information.</p>
+            </section>
 
-        <aside id="sidebar">
-          <a href="https://github.com/chrissimpkins/tweetledee/zipball/master" class="button" id="dl-btn-zip">
-            <small>Download</small>
-            .zip file
-          </a>
-          <a href="https://github.com/chrissimpkins/tweetledee/tarball/master" class="button" id="dl-btn-gz">
-            <small>Download</small>
-            .tar.gz file
-          </a>
-          <a href="index.html" class="tld-btn">
-            <small>Return</small>
-            Home
-          </a>
-          <a href="developer.html" class="tld-btn">
-            <small>Extend It</small>
-            Developers
-          </a>
-          <a href="usage.html" class="tld-btn">
-            <small>Learn More</small>
-            Usage
-          </a>
+            <aside id="sidebar">
+                <a href="https://github.com/chrissimpkins/tweetledee/zipball/master" class="button" id="dl-btn-zip">
+                    <small>Download</small>
+                    .zip file
+                </a>
+                <a href="https://github.com/chrissimpkins/tweetledee/tarball/master" class="button" id="dl-btn-gz">
+                    <small>Download</small>
+                    .tar.gz file
+                </a>
+                <a href="index.html" class="tld-btn">
+                    <small>Return</small>
+                    Home
+                </a>
+                <a href="developer.html" class="tld-btn">
+                    <small>Extend It</small>
+                    Developers
+                </a>
+                <a href="usage.html" class="tld-btn">
+                    <small>Learn More</small>
+                    Usage
+                </a>
 
-          <p class="repo-owner"> Developed by <br><a href="https://github.com/chrissimpkins"><span style="font-size:20px;color:#751590; margin-right:4px"><i class="icon-github"></i></span></a><a href="http://sweetme.at">Chris Simpkins</a><a href="http://twitter.com/csimpkins"><span style="font-size:20px;color:#00aced; margin-left:4px"><i class="icon-twitter"></i></span></a></p>
-          <p class="repo-owner"><u>Contributors</u> <br>
-          <a href="https://github.com/levymetal">Christian Varga</a><br>
-          <a href="https://twitter.com/fogcat">Geoff Smith</a><br>
-          <a href="https://github.com/themattharris">Matt Harris</a><br>
-          <a href="https://github.com/jjschwarz">Jason Schwarz</a>
-          </p>
-        </aside>
-      </div>
+                <p class="repo-owner">Developed by
+                    <br>
+                    <a href="https://github.com/chrissimpkins">
+                        <span style="font-size:20px;color:#751590; margin-right:4px"><i class="icon-github"></i>
+                        </span>
+                    </a><a href="http://sweetme.at">Chris Simpkins</a>
+                    <a href="http://twitter.com/csimpkins">
+                        <span style="font-size:20px;color:#00aced; margin-left:4px"><i class="icon-twitter"></i>
+                        </span>
+                    </a>
+                </p>
+                <p class="repo-owner"><u>Contributors</u>
+                    <br>
+                    <a href="https://github.com/levymetal">Christian Varga</a>
+                    <br>
+                    <a href="https://twitter.com/fogcat">Geoff Smith</a>
+                    <br>
+                    <a href="https://github.com/themattharris">Matt Harris</a>
+                    <br>
+                    <a href="https://github.com/jjschwarz">Jason Schwarz</a>
+                    <br>
+                    <a href="https://github.com/SpartanJ">Martín Lucas Golini</a>
+                </p>
+            </aside>
+        </div>
     </div>
     <footer>
-      <div class="inner">
-      <div class="license">
-      This documentation is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a> <br>
-      Tweetledee is licensed under the <a href="https://github.com/chrissimpkins/tweetledee/blob/master/LICENSE.txt">MIT license</a>
-      </div>
-      </div>
+        <div class="inner">
+            <div class="license">
+                This documentation is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>
+                <br>Tweetledee is licensed under the <a href="https://github.com/chrissimpkins/tweetledee/blob/master/LICENSE.txt">MIT license</a>
+            </div>
+        </div>
     </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
-  </body>
+</body>
+
 </html>
