updated contributors for v0.4.2

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </a>Requirements</h2>
                 <p>You will need the following to use Tweetledee:</p>
                 <ul>
-                    <li>Access to a web server with PHP version 5.3 or greater.  As of Tweetledee v0.4.1, JSON pretty printing is also supported for PHP version 5.3 or greater (previously v5.4+).</li>
+                    <li>Access to a web server with PHP version 5.3 or greater. As of Tweetledee v0.4.1, JSON pretty printing is also supported for PHP version 5.3 or greater (previously v5.4+).</li>
                     <li>libcurl installed on your web server (<a href="http://curl.haxx.se/libcurl/">cURL</a>)</li>
                     <li>Twitter application OAuth settings and access tokens</li>
                     <li>Local file write access on the web server (if you are using the caching Tweetledee files)</li>
@@ -268,28 +268,22 @@
                     Support
                 </a>
 
-                <p class="repo-owner">Developed by
-                    <br>
-                    <a href="https://github.com/chrissimpkins">
-                        <span style="font-size:20px;color:#751590; margin-right:4px"><i class="icon-github"></i>
-                        </span>
-                    </a><a href="http://sweetme.at">Chris Simpkins</a>
-                    <a href="http://twitter.com/csimpkins">
-                        <span style="font-size:20px;color:#00aced; margin-left:4px"><i class="icon-twitter"></i>
-                        </span>
-                    </a>
-                </p>
                 <p class="repo-owner"><u>Contributors</u>
                     <br>
-                    <a href="https://github.com/levymetal">Christian Varga</a>
+                    <a href="https://github.com/chrissimpkins">Chris Simpkins</a>
                     <br>
-                    <a href="https://twitter.com/fogcat">Geoff Smith</a>
+                    <a href="https://github.com/SpartanJ">Martín Lucas Golini</a>
                     <br>
                     <a href="https://github.com/themattharris">Matt Harris</a>
                     <br>
+                    <a href="https://github.com/vinhdizzo">Vinh Nguyen</a>
+                    <br>
                     <a href="https://github.com/jjschwarz">Jason Schwarz</a>
                     <br>
-                    <a href="https://github.com/SpartanJ">Martín Lucas Golini</a>
+                    <a href="https://twitter.com/fogcat">Geoff Smith</a>
+                    <br>
+                    <a href="https://github.com/levymetal">Christian Varga</a>
+                </p>
             </aside>
         </div>
     </div>
