Last part of #67 : documentation update

--- a/usage.html
+++ b/usage.html
@@ -430,6 +430,12 @@
                         <td>you</td>
                         <td>any username</td>
                     </tr>
+                    <tr>
+                        <td>recursion_limit</td>
+                        <td>Limit the number of "parent" tweets to load when loading a response tweet</td>
+                        <td>0</td>
+                        <td>Any positive integer</td>
+                    </tr>
                 </table>
                 <h5>Favorites RSS Feed with 100 Tweets</h5>
                 <pre><code>http://[yourdomain]/tweetledee/favoritesrss.php?c=100</code></pre>
@@ -472,6 +478,12 @@
                         <td>Exclude replies</td>
                         <td>0 (=false)</td>
                         <td>1 (=true)</td>
+                    </tr>
+                    <tr>
+                        <td>recursion_limit</td>
+                        <td>Limit the number of "parent" tweets to load when loading a response tweet</td>
+                        <td>0</td>
+                        <td>Any positive integer</td>
                     </tr>
                 </table>
                 <h5>Home Timeline with 100 Tweets</h5>
@@ -537,6 +549,12 @@
                         <td>0 (=false)</td>
                         <td>1 (=true)</td>
                     </tr>
+                    <tr>
+                        <td>recursion_limit</td>
+                        <td>Limit the number of "parent" tweets to load when loading a response tweet</td>
+                        <td>0</td>
+                        <td>Any positive integer</td>
+                    </tr>
                 </table>
                 <h5>Your list called "reading-list"</h5>
                 <pre><code>http://[yourdomain]/tweetledee/listsrss.php?list=reading-list</code></pre>
@@ -600,6 +618,12 @@
                         <td>mixed</td>
                         <td>popular | recent</td>
                     </tr>
+                    <tr>
+                        <td>recursion_limit</td>
+                        <td>Limit the number of "parent" tweets to load when loading a response tweet</td>
+                        <td>0</td>
+                        <td>Any positive integer</td>
+                    </tr>
                 </table>
                 <h5>Search for "test"</h5>
                 <pre><code>http://[yourdomain]/tweetledee/searchrss.php?q=test</code></pre>
@@ -658,6 +682,12 @@
                         <td>Exclude retweets</td>
                         <td>0 (=false)</td>
                         <td>1 (=true)</td>
+                    </tr>
+                    <tr>
+                        <td>recursion_limit</td>
+                        <td>Limit the number of "parent" tweets to load when loading a response tweet</td>
+                        <td>0</td>
+                        <td>Any positive integer</td>
                     </tr>
                 </table>
                 <h5>User Timeline with 100 Tweets</h5>
